--- a/tools/wlr-assets/Cargo.toml
+++ b/tools/wlr-assets/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "wlr-assets"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
 flate2 = "1.0.26"
+openssl = "0.10.55"
 reqwest = { version = "0.11.18", features = ["blocking"] }
 tar = "0.4.38"
 bytes = "1.4.0"
